# meeting-transcriber

./: .env.example  .gitignore  README.md  pyproject.toml
meeting_summary/: cli.py  folders.py  prompt.py  summarizer.py
tests/: test_cli.py  test_folders.py  test_prompt.py  test_summarizer.py
tests/fixtures/: teste_completa.txt  teste_conflito.txt  teste_curta.txt  teste_muitos_participantes.txt  teste_sem_definicoes.txt
